--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,17 +14,17 @@
     <div class="home-btn-category">
 
       <div class="home-btn-category btn"
-          data-action="click->refresh-markers#test">
+          data-action="click->refresh-markers#passIdToMapController">
         <a class="category-link" href="#" id="music">Music</a>
       </div>
 
       <div class="home-btn-category btn"
-          data-action="click->refresh-markers#update">
+          data-action="click->refresh-markers#passIdToMapController">
         <a class="category-link" href="#" id="art">Art & Theater</a>
       </div>
 
       <div class="home-btn-category btn"
-          data-action="click->refresh-markers#update">
+          data-action="click->refresh-markers#passIdToMapController">
         <a class="category-link" href="#" id="sport">Sport</a>
       </div>
 
