fixing navbar and fixing search bar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,14 +9,16 @@
   </div>
 
   <div data-controller="refresh-markers">
-    <%= form_with url: root_path, method: :get, class: "d-flex" do %>
-      <%= text_field_tag :query,
-        params[:query],
-        class: "form-control",
-        placeholder: "Find a show"
-      %>
-      <%= submit_tag "Search", class: "btn btn-primary" %>
-    <% end %>
+    <div class ="search-bar">
+      <%= form_with url: root_path, method: :get, class: "d-flex" do %>
+        <%= submit_tag "Search", class: "btn-primary-search" %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control-search",
+          placeholder: "Find a show"
+        %>
+      <% end %>
+    </div>
 
     <div class="home-btn-category">
 
