--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -56,3 +56,12 @@
 .container-fluid {
   margin-bottom: 10px;
 }
+
+#terms {
+  color: #ab6b7e;
+  font-size: 12px;
+  text-align: center;
+  font-family: 'Manrope', sans-serif;
+  padding: 20px;
+  margin-top: 220px;
+}
