customize map and navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-container {
   background-color: white;
-  padding: 29px;
+  padding: 31px;
+  border-bottom: 1px black solid;
 }
 
 .navbar-toggler {
@@ -34,8 +35,8 @@
 }
 
 .navbar-brand {
-  font-family: 'Manrope', sans-serif;
-  font-size: 17px;
+  font-family: 'Caveat', cursive;
+  font-size: 23px;
 }
 
 .navbar-collapse {
