--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,22 @@
 // Specific CSS for your home-page
 .header-home {
   background-color: white;
+  // background-image: linear-gradient(256deg, #ffffff 0%, rgb(243 230 222) 40%, #ffffff 100%);
+//   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+// 	background-size: 400% 400%;
+// 	animation: gradient 15s ease infinite;
+// 	height: 100vh;
+// }
+// @keyframes gradient {
+// 	0% {
+// 		background-position: 0% 50%;
+// 	}
+// 	50% {
+// 		background-position: 100% 50%;
+// 	}
+// 	100% {
+// 		background-position: 0% 50%;
+// 	}
 }
 
 .title-home {
@@ -12,7 +28,8 @@
   font-weight: bold;
   text-align: center;
   font-size: 25px;
-  padding-top: 10px;
+  padding-top: 18px;
+  line-height: 1.6;
 }
 
 .p-home {
