--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,7 @@
             <li class="nav-item"><%= link_to "My tickets", my_tickets_path, class:"nav-link" %></li>
             <li class="nav-item"><a class="nav-link" href="/conversations/">Discussions</a></li>
             <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
+            <li class="nav-item"><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class:"nav-link" %></li>
             <li class="nav-item"><a class="nav-link" id="terms" href="#">Terms of Service & Privacy Policy</a></li>
             <!--li class="nav-item"-->
             <!--/li-->
