--- a/app/assets/stylesheets/components/_update_form.scss
+++ b/app/assets/stylesheets/components/_update_form.scss
@@ -1,10 +1,10 @@
 .container {
   width: fit-content;
   padding: 1em;
-  margin: 20px;
+  // margin: 20px;
   background-color: #fff;
   border-radius: 4.2px;
-  border: #84C4BB 1px solid;
+  // border: #84C4BB 1px solid;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.5);
   .btn {
     color: white;
@@ -13,8 +13,65 @@
   }
   h2 {
     text-align: center;
+    font-family: 'Manrope', sans-serif;
+    margin-bottom: 31px;
+    margin-top: 10px;
+    font-size: 22px;
+  }
+  h3 {
+    text-align: center;
+    font-family: 'Caveat', cursive;
+    margin-bottom: 30px;
+    font-size: 25px;
+    color: white;
+  }
+  h4 {
+    text-align: center;
+    font-family: 'Caveat', cursive;
+    margin-bottom: 20px;
+    font-size: 25px;
+    color: black;
+    margin-top: 20px;
+  }
+  h5 {
+    font-family: Manrope, sans-serif;
+    margin-bottom: 20px;
+    font-size: 20px;
+    color: black;
+    margin-top: 20px;
+    font-weight: bold;
   }
 }
+
+.parameters-container {
+  padding-bottom: 15px;
+}
+
+.col-form-label {
+  color: white;
+  font-size: 0;
+}
+
+.about-me{
+  background-color: black;
+  color: white;
+  margin: -3px;
+  border-radius: 10px;
+  padding: 18px;
+}
+
+.form-text {
+  margin-top: 0.25rem;
+  font-size: 0.7em;
+  color: #6c757d;
+  font-family: Manrope, sans-serif;
+}
+
+.update-btn {
+  display: flex;
+  justify-content: flex-end
+}
+
 .back {
   text-decoration: none;
   padding: 5px;
@@ -22,6 +79,17 @@
   background-color: black;
   color: white;
 }
+
+.form-control {
+  font-family: 'Manrope', sans-serif;
+  font-size: smaller;
+}
+
+.form-label {
+  margin-bottom: 0.5rem;
+  font-family: Manrope, sans-serif;
+}
+
 .form-check-input.is-valid ~ .form-check-label {
   color: black;
 }
