--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -2,7 +2,7 @@
   <div class="profile-banner"
        style="background-image: linear-gradient(rgba( 0, 0, 0, 0.5), rgba( 255, 255, 255, 0.9)), url(<%= image_path @my_profile.picture_url %>);">
     <%= image_tag @my_profile.picture_url, class: 'profile-picture' %>
-    <%= link_to 'Modify your profile', edit_user_registration_path, class: "btn btn-flat" %>
+    <%= link_to 'Modify your profile', edit_user_registration_path, class: "btn-flat" %>
   </div>
 
   <div class="description-card">
@@ -12,14 +12,16 @@
 
   <div class="interest-card">
     <h2>My interests</h2>
-    <div class="grid">
-      <% @my_profile.tags.each do |tag| %>
-        <% unless tag.empty? %>
-        <div class="tag">
-          <p><%= tag %></p>
-        </div>
+    <div class="scrollmenu">
+      <div class="grid">
+        <% @my_profile.tags.each do |tag| %>
+          <% unless tag.empty? %>
+          <div class="tag">
+            <p><%= tag %></p>
+          </div>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
   </div>
 
@@ -29,7 +31,7 @@
     <div class="ticket-card">
       <%= image_tag event.picture_url %>
       <div class="ticket-card-infos">
-        <p><%= event.date.strftime("%b %-d") %> <%= event.time.to_i %>h</p>
+        <p><%= event.date.strftime("%b %-d") %> . <%= event.time.to_i %>h</p>
         <h3><%= event.title %></h3>
         <p><%= event.venue %></p>
       </div>
