--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -1,7 +1,9 @@
 .profile-picture {
   width: 150px;
+  height: 150px;
   border-radius: 50%;
   margin: 30px 0;
+  object-fit: cover;
 }
 .profile-banner {
   width: 100%;
