--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,10 +4,35 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :username,
-                required: false,
+    <%= f.input :first_name,
+                required: true,
                 autofocus: true,
                 input_html: { autocomplete: "username" } %>
+    <%= f.input :username,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "username" } %>
+    <%= f.input :age,
+                required: true,
+                input_html: { autocomplete: "new-age" } %>
+    <%= f.input :description,
+                required: true,
+                input_html: { autocomplete: "new-description" } %>
+    <%= f.input :tags,
+                collection: ['Baseball', 'Basketball', 'Boxing', 'Cycling', 'eSports',
+                            'Football', 'Gymnastics', 'Hockey', 'Martial', 'Arts', 'Soccer',
+                            'Tennis', 'Volleyball', 'Pop', 'Alternative', 'Ballads/Romantic', 'Blues', 'Chanson',
+                            'Francaise', 'Classical', 'Country', 'Dance/Electronic', 'Folk',
+                            'Hip-Hop/Rap', 'Jazz', 'Latin', 'Metal', 'R&B', 'Reggae', 'Religious', 'Rock', 'Comedy',
+                            'Cultural', 'Dance', 'Fashion', 'Magic', 'Music', 'Opera', 'Puppetry', 'Theatre'],
+                as: :check_boxes,
+                input_html: { class: "tag-selector" },
+                item_wrapper_class: 'tag-item',
+                required: true %>
+    <%= f.input :photos,
+                as: :file,
+                input_html: { multiple: true },
+                required: true %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
