message card styled with button to collapse window

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,6 +8,7 @@
 @import "profile";
 @import "map";
 @import "message";
+@import "message_card";
 @import "homebtn";
 @import "tickets";
 @import "buybtn";
