--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="header-home">
+<div class="header-home" data-controller="refresh-markers">
 
   <div class="title-home">
     <h1>Choose an event near you and find a buddy </h1>
@@ -8,17 +8,42 @@
     <p>No more saturday night <strong>alone</strong>. With last minute date, <strong>choose</strong> a show and <strong>find a buddy</strong> to go with you. </p>
   </div>
 
-  <div data-controller="refresh-markers">
-    <div class ="search-bar">
-      <%= form_with url: root_path, method: :get, class: "d-flex" do %>
-        <%= submit_tag "Search", class: "btn-primary-search" %>
-        <%= text_field_tag :query,
-          params[:query],
-          class: "form-control-search",
-          placeholder: "Find a show"
-        %>
-      <% end %>
+  <button type="button" class="form-control-search" data-toggle="modal" data-target="modal">Where would you like to see a show?</button>
+
+  <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Where & where would you like to see a show?</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <div class="search-bar">
+                <%= form_with url: root_path, method: :get, class: "d-flex" do %>
+                  <%= submit_tag "Search", class: "btn-primary-search" %>
+                  <%= text_field_tag :query,
+                    params[:query],
+                    class: "form-control-search",
+                    placeholder: "Enter a location"
+                  %>
+                <% end %>
+              </div>
+            </div>
+            <div class="form-group">
+              <p>Calendar</p>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Search</button>
+        </div>
+      </div>
     </div>
+  </div>
 
     <div class="home-btn-category">
 
