desiging all the pages

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-container {
   background-color: white;
   padding: 31px;
-  border-bottom: 1px black solid;
+  border-bottom: thick double #e3e3e3;
 }
 
 .navbar-toggler {
