--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,41 +1,47 @@
-<div class="text-center">
-  <div class="profile-banner"
-       style="background-image: linear-gradient(rgba( 0, 0, 0, 0.5), rgba( 255, 255, 255, 0.9)), url(<%= image_path @user.picture_url %>);">
-    <%= image_tag @user.picture_url, class: 'profile-picture' %>
+<div class="container-profile-public">
+  <div class="profile-photo">
+    <%= image_tag @user.picture_url, class: 'profile-public' %>
   </div>
 
-  <div class="description-card">
-    <h2>About me</h2>
-    <p><%= @user.description %></p>
-  </div>
+  <div class="description-container">
+    <div class="description-block">
 
-  <div class="interest-card">
-    <div class="people-btn">
-      <%= link_to "Back to event", :back, class:"nav-link-buy" %>
-    </div>
-      <h2>My interests</h2>
-      <div class="grid">
-        <% @user.tags.each do |tag| %>
-          <div class="tag">
-            <p><%= tag %></p>
-          </div>
-        <% end %>
+      <div class="about-me-container">
+        <h2>About me</h2>
+        <p><%= @user.description %></p>
       </div>
-  </div>
 
-  <div class="shows-block">
-    <h2>My favourite shows</h2>
-    <% if @my_events != nil %>
-      <% @my_events.first(2).each do |event| %>
-      <div class="ticket-card">
-        <%= image_tag event.picture_url %>
-        <div class="ticket-card-infos">
-          <p><%= event.date.strftime("%b %-d") %> <%= event.time.to_i %>h</p>
-          <h3><%= event.title %></h3>
-          <p><%= event.venue %></p>
+      <div class="interest-card-container">
+        <h2>My interests</h2>
+        <div class="grid-tag">
+          <% @user.tags.each do |tag| %>
+            <div class="tag-container">
+              <p><%= tag %></p>
+            </div>
+          <% end %>
         </div>
       </div>
-      <% end %>
-    <% end %>
+
+      <div class="shows-container">
+        <h2>My favourite shows</h2>
+        <% if @my_events != nil %>
+          <% @my_events.first(2).each do |event| %>
+          <div class="ticket-card favorite-show">
+            <%= image_tag event.picture_url %>
+            <div class="ticket-card-infos">
+              <p><%= event.date.strftime("%b %-d") %> <%= event.time.to_i %>h</p>
+              <h3><%= event.title %></h3>
+              <p><%= event.venue %></p>
+            </div>
+          </div>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
   </div>
+
+  <div class="people-btn back-btn">
+      <%= link_to "Back to event", :back, class:"nav-link-buy" %>
+    </div>
+
 </div>
