styling the modal

--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -27,7 +27,9 @@
   font-family: 'Manrope', sans-serif;
   font-size: 13px;
   padding-left: 12px;
-  border-radius: 48px;
+  border-radius: 15px;
   padding: 12px;
-  width: 204px;
+  width: 275px;
+  color: grey;
+  border: none;
 }
