--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,63 +8,51 @@
     <p>No more saturday night <strong>alone</strong>. With last minute date, <strong>choose</strong> a show and <strong>find a buddy</strong> to go with you. </p>
   </div>
 
-  <button type="button" class="form-control-search" data-toggle="modal" data-target="modal">Where would you like to see a show?</button>
+  <button type="button" class="form-control-search" data-bs-toggle="modal" data-bs-target="#modal" data-bs-whatever="@getbootstrap">Where & when?</button>
 
-  <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Where & where would you like to see a show?</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <div class="search-bar">
-                <%= form_with url: root_path, method: :get, class: "d-flex" do %>
-                  <%= submit_tag "Search", class: "btn-primary-search" %>
-                  <%= text_field_tag :query,
-                    params[:query],
-                    class: "form-control-search",
-                    placeholder: "Enter a location"
-                  %>
-                <% end %>
-              </div>
-            </div>
-            <div class="form-group">
-              <p>Calendar</p>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Search</button>
-        </div>
+  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true" data-refresh-markers-target="modal">
+    <div class="modal-dialog">
+      <div class="modal-content" data-refresh-markers-target="form">
+        <%# <div class="modal-header"> %>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Where and when would you like to see a show?</h1>
+        <%# </div> %>
+        <%= form_with url: root_path, method: :get, class: "modal-form" do %>
+          <%= submit_tag "Search"%>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control-search",
+            placeholder: "Enter a location"
+          %>
+          <%= date_field :query,
+            params[:query],
+            class: "form-control-search",
+            placeholder: "Enter a date"
+          %>
+        <% end %>
       </div>
     </div>
   </div>
 
-    <div class="home-btn-category">
+  <div class="home-btn-category">
 
-      <div class="home-btn-category btn"
-          data-action="click->refresh-markers#passIdToMapController">
-        <a class="category-link" href="#" id="music">Music</a>
-      </div>
-
-      <div class="home-btn-category btn"
-          data-action="click->refresh-markers#passIdToMapController">
-        <a class="category-link" href="#" id="art">Art & Theater</a>
-      </div>
-
-      <div class="home-btn-category btn"
-          data-action="click->refresh-markers#passIdToMapController">
-        <a class="category-link" href="#" id="sport">Sport</a>
-      </div>
-
+    <div class="home-btn-category btn"
+        data-action="click->refresh-markers#passIdToMapController">
+      <a class="category-link" href="#" id="music">Music</a>
     </div>
 
-    <%= render "shared/map" %>
+    <div class="home-btn-category btn"
+        data-action="click->refresh-markers#passIdToMapController">
+      <a class="category-link" href="#" id="art">Art & Theater</a>
+    </div>
+
+    <div class="home-btn-category btn"
+        data-action="click->refresh-markers#passIdToMapController">
+      <a class="category-link" href="#" id="sport">Sport</a>
+    </div>
+
   </div>
+
+  <%= render "shared/map" %>
 
 </div>
