--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -26,10 +26,11 @@
 .form-control-search {
   font-family: 'Manrope', sans-serif;
   font-size: 13px;
-  padding-left: 12px;
-  border-radius: 15px;
-  padding: 12px;
+  border-radius: 10px;
+  padding: 15px;
   width: 275px;
   color: grey;
   border: none;
+  background-color: #EEEEEE;
+  margin: 0 70px 30px;
 }
