--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,17 +8,17 @@
     <p>No more saturday night <strong>alone</strong>. With last minute date, <strong>choose</strong> a show and <strong>find a buddy</strong> to go with you. </p>
   </div>
 
-  <button type="button" class="form-control-search" data-bs-toggle="modal" data-bs-target="#modal" data-bs-whatever="@getbootstrap">Where & when?</button>
+  <button type="button" class="form-control-search" data-bs-toggle="modal" data-bs-target="#modal" data-bs-whatever="@getbootstrap">Pick a city and a date</button>
 
   <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true" data-refresh-markers-target="modal">
     <div class="modal-dialog">
       <div class="modal-content" data-refresh-markers-target="form">
-        <%# <div class="modal-header"> %>
+
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           <h1 class="modal-title fs-5" id="exampleModalLabel">Where and when would you like to see a show?</h1>
-        <%# </div> %>
+
         <%= form_with url: root_path, method: :get, class: "modal-form" do %>
-          <%= submit_tag "Search"%>
+          <%= submit_tag "Search", class: 'search-btn'%>
           <%= text_field_tag :query,
             params[:query],
             class: "form-control-search",
