--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -62,7 +62,7 @@
                 Write your message
               </div>
             </div>
-
+          </div>
           <% end %>
         </div>
 
@@ -81,7 +81,9 @@
   </div>
 </div>
 
+
 <div class="event-banner-price">
+
   <div class="event-price">
     <p><%= @event.price %>$</p>
   </div>
