finished search modal

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,8 +24,8 @@
             class: "form-control-search",
             placeholder: "Enter a location"
           %>
-          <%= date_field :query,
-            params[:query],
+          <%= date_field :date,
+            params[:date],
             class: "form-control-search",
             placeholder: "Enter a date"
           %>
