--- a/app/assets/stylesheets/pages/_showpublicprofile.scss
+++ b/app/assets/stylesheets/pages/_showpublicprofile.scss
@@ -61,7 +61,7 @@
   overflow-y: scroll;
 }
 
-.shows-container {
+.show-container {
   h2 {
     font-family: 'Manrope', sans-serif;
     font-size: 18px;
