--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class="shows-container">
+      <div class="show-container">
         <h2>My favourite shows</h2>
         <% if @my_events != nil %>
           <% @my_events.first(2).each do |event| %>
