--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,19 +22,22 @@
 
     <div class="home-btn-category">
 
-      <div class="home-btn-category btn"
-          data-action="click->refresh-markers#passIdToMapController">
-        <a class="category-link" href="#" id="music">Music</a>
+      <div>
+        <button class="home-btn-category b-home" id="music"
+        data-action="click->refresh-markers#passIdToMapController">
+        Music</button>
       </div>
 
-      <div class="home-btn-category btn"
-          data-action="click->refresh-markers#passIdToMapController">
-        <a class="category-link" href="#" id="art">Art & Theater</a>
+      <div>
+        <button class="home-btn-category b-home" id="art"
+        data-action="click->refresh-markers#passIdToMapController">
+        Art & Theater</button>
       </div>
 
-      <div class="home-btn-category btn"
-          data-action="click->refresh-markers#passIdToMapController">
-        <a class="category-link" href="#" id="sport">Sport</a>
+      <div>
+        <button class="home-btn-category b-home" id="sport"
+        data-action="click->refresh-markers#passIdToMapController">
+        Sport</button>
       </div>
 
     </div>
