--- a/app/assets/stylesheets/components/_eventbanner.scss
+++ b/app/assets/stylesheets/components/_eventbanner.scss
@@ -24,29 +24,28 @@
 
 .btn-more-info {
   text-decoration: none;
-    background-color: white;
-    font-family: 'Manrope', sans-serif;
-    font-size: 8px;
-    display: inline-block;
-    border-radius: 10px;
-    border: 4px double #000000;
-    color: black;
-    text-align: center;
-    padding: 5px;
-    width: 108px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
-    margin-bottom: 10px;
+  background-color: white;
+  font-family: 'Manrope', sans-serif;
+  font-size: 8px;
+  display: inline-block;
+  border-radius: 10px;
+  border: 4px double #000000;
+  color: black;
+  text-align: center;
+  padding: 5px;
+  width: 108px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 0 0 0 -11px;
 }
 
-.event-banner-image {
-  display: flex;
-  height: 148px;
-  text-align: center;
-  margin-left: 20px;
-  margin-top: 5px;
-}
+// .event-banner-image {
+//   display: flex;
+//   height: 148px;
+//   text-align: center;
+//   margin-left: 20px;
+//   margin-top: 5px;
+// }
 
 .event-banner-regroup {
   width: 100%;
