--- a/app/assets/stylesheets/components/_cardproduct.scss
+++ b/app/assets/stylesheets/components/_cardproduct.scss
@@ -31,5 +31,9 @@
 }
 
 .card-product .card-product-infos {
-  padding: 16px;
+  padding: 15px;
+  padding-right: 0;
+}
+#staticBackdropLabel {
+  padding: 0 0 0 120px;
 }
