--- a/app/assets/stylesheets/components/_homebtn.scss
+++ b/app/assets/stylesheets/components/_homebtn.scss
@@ -2,7 +2,7 @@
   font-family: 'Manrope', sans-serif;
     font-size: 0.9rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: auto;
     margin-bottom: 15px;
     margin: 20px;
@@ -15,8 +15,9 @@
   margin: auto;
   padding: 10px;
   border-radius: 14px;
-  margin-top: 24px;
+  margin-top: -20px;
   margin-bottom: 10px;
+  width: 100px;
 }
 
 .b-home:hover {
