--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-container">
     <div class="navbar navbar-expand-sm navbar-light navbar-lmd">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Last Minute Date</a>
+        <a class="navbar-brand" id="title" href="/">Last Minute Date</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
