changing css banner

--- a/app/assets/stylesheets/components/_eventbanner.scss
+++ b/app/assets/stylesheets/components/_eventbanner.scss
@@ -8,14 +8,16 @@
   color: white;
   font-family: 'Caveat', cursive;
   margin-bottom: 3.5px;
-  font-size: 12px;
+  font-size: 16px;
+  text-align: center;
 }
 
 .event-banner-text h2 {
   color: white;
   font-family: 'Manrope', sans-serif;
   padding-top: 10px;
-  font-size: 15px;
+  font-size: 18px;
+  text-align: center;
 }
 
 .event-banner-text {
