indented properly show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,10 +38,11 @@
             <div class="card-product" id="<%= user.id %>">
 
               <%= link_to user_path(user) do  %>
-              <% if user.photos.attached? %>
-                <%= cl_image_tag user.photos.first.key %>
-              <% else %>
-                <%= image_tag user.picture_url%>
+                <% if user.photos.attached? %>
+                  <%= cl_image_tag user.photos.first.key %>
+                <% else %>
+                  <%= image_tag user.picture_url%>
+                <% end %>
               <% end %>
               <div class="card-product-infos">
               <div>
