added default avatar if no picture uploaded

--- a/app/assets/stylesheets/components/_cardproduct.scss
+++ b/app/assets/stylesheets/components/_cardproduct.scss
@@ -34,6 +34,11 @@
   padding: 15px;
   padding-right: 0;
 }
+
 #staticBackdropLabel {
   padding: 0 0 0 120px;
+}
+
+#tbd-avatar {
+  object-fit: contain;
 }
