--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
     <%= f.input :photos,
                 as: :file,
                 input_html: { multiple: true },
-                required: true %>
+                required: false %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
