--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -7,9 +7,10 @@
       style="background-image: linear-gradient(rgba( 0, 0, 0, 0.5), rgba( 255, 255, 255, 0.9)), url(<%= image_path @my_profile.picture_url %>);">
       <%= image_tag @my_profile.picture_url, class: 'profile-picture' %>
     <% else %>
-      <%= image_tag 't-bg.png', class: 'profile-picture' %>
+      style="background-image: linear-gradient(rgba( 0, 0, 0, 0.5), rgba( 255, 255, 255, 0.9)), url(<%= image_path 't-bg.png' %>);">
+      <%= image_tag 'placeholder-avatar.png', class: 'profile-picture' %>
     <% end %>
-    <%= link_to 'Modify your profile', edit_user_registration_path, class: "btn btn-flat" %>
+    <%= link_to 'Update your profile', edit_user_registration_path, class: "btn btn-flat" %>
   </div>
 
   <div class="description-card">
