seeds for friday

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,9 +43,9 @@
       </div>
 
       <div>
-        <button class="home-btn-category b-home" id="theater"
+        <button class="home-btn-category b-home" id="theatre"
         data-action="click->refresh-markers#passIdToMapController">
-        Theater</button>
+        Theatre</button>
       </div>
 
       <div>
